--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-to-pdf-api",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Universal HTML/URL to PDF & Screenshot API with template engine.",
   "main": "server.js",
   "scripts": {
@@ -8,10 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^21.0.0"
   },
   "devDependencies": {
