--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-to-pdf-api",
-  "version": "5.2.5",
+  "version": "6.0.0",
   "description": "Universal HTML/URL to PDF & Screenshot API with template engine.",
   "main": "server.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "body-parser": "^1.20.2",
+    "bwip-js": "^4.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^21.0.0",
+    "qrcode": "^1.5.4",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
