docs: Rewrite README for v7.0.0 — professional documentation
- Complete README rewrite with What's New section
- Added all v7.0.0 endpoints: encryption, signatures, signed URLs, health check
- Added changelog from v1.0.0 to v7.0.0
- Added contributing guide and license reference
- Updated architecture diagram with security & monitoring layers
- Expanded environment variables table with new configs
- Production deployment checklist updated
- Comprehensive test suite (16 tests covering all features)
- Expanded .dockerignore for smaller image builds
- Updated .gitignore patterns

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,49 @@
+# Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+
+# Output files
 output/*.pdf
+output/*.png
+output/*.csv
+output/*.jpg
+output/*.webp
+
+# Data (persisted via volumes)
+data/
+
+# Environment
 .env
+.env.*
+
+# Git
 .git
+.gitignore
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Documentation (not needed in image)
+README.md
+LICENSE
+CHANGELOG.md
+docs/
+
+# Tests
+test_api.js
+
+# Docker
+docker-compose.yml
+Dockerfile
+.dockerignore
+
+# Gemini/Agent
+.gemini/
+.agent/
